--- a/APP/Client/hospital-appointment/public/index.html
+++ b/APP/Client/hospital-appointment/public/index.html
@@ -12,8 +12,9 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script src="https://cdnstaging.zipy.ai/sdk/Beta0.2.12/zipy.min.umd.js" crossorigin="anonymous"></script> <script> window.zipy && window.zipy.init('1b6f0942');</script>
-    
+    <!-- <script src="https://storage.googleapis.com/zipy-dev-sdk/Beta0.2.16-dev/zipy.min.umd.js" crossorigin="anonymous"></script> <script> window.zipy && window.zipy.init('ee91dd4d', {releaseVer: '1.0.0'});</script> -->
+    <!-- <script src="https://storage.googleapis.com/zipy-cdn-staging/sdk/Beta0.3.1/zipy.min.umd.js" crossorigin="anonymous"></script> <script> window.zipy && window.zipy.init('a0bfb5ed', {releaseVer: '1.0.0'});</script> -->
+    <!-- <script src="https://cdnstaging.zipy.ai/sdk/Beta0.3.2/zipy.min.umd.js" crossorigin="anonymous"></script> <script> window.zipy && window.zipy.init('a0bfb5ed', {releaseVer: '1.0.1'});</script> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
