changed api key

--- a/APP/Client/hospital-appointment/public/index.html
+++ b/APP/Client/hospital-appointment/public/index.html
@@ -12,7 +12,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script src="https://cdn.zipy.ai/sdk/v1.0/zipy.min.umd.js" crossorigin="anonymous"></script> <script> window.zipy && window.zipy.init('b42b3531');</script>
+    <script src="https://storage.googleapis.com/zipy-dev-sdk/Beta0.3.11-dev/zipy.min.umd.js" crossorigin="anonymous"></script> <script> window.zipy && window.zipy.init('efea4cb1');</script>
     <!-- <script src="https://storage.googleapis.com/zipy-dev-sdk/Beta0.2.16-dev/zipy.min.umd.js" crossorigin="anonymous"></script> <script> window.zipy && window.zipy.init('ee91dd4d', {releaseVer: '1.0.0'});</script> -->
     <!-- <script src="https://storage.googleapis.com/zipy-cdn-staging/sdk/Beta0.3.1/zipy.min.umd.js" crossorigin="anonymous"></script> <script> window.zipy && window.zipy.init('a0bfb5ed', {releaseVer: '1.0.0'});</script> -->
     <!-- <script src="https://cdnstaging.zipy.ai/sdk/Beta0.3.2/zipy.min.umd.js" crossorigin="anonymous"></script> <script> window.zipy && window.zipy.init('a0bfb5ed', {releaseVer: '1.0.1'});</script> -->
